# ROS

magic_number/: CMakeLists.txt  package.xml
magic_number/src/: magic_client.cpp  magic_server.cpp
magic_number/srv/: Magic.srv
prime_tutorial/: CMakeLists.txt  README.md  package.xml
prime_tutorial/action/: Prime.action
prime_tutorial/src/: prime_client.cpp  prime_server.cpp
